# Multi-Phase-Todo-App

./: .dockerignore  .env.docker  .gitignore  AUTHENTICATION_FLOW_FIX.md  AUTHENTICATION_FLOW_FIXES_DETAILED.md  AUTHENTICATION_SETUP.md  BUG_ROOT_CAUSE_ANALYSIS_REPORT.md  CONFIGURATION_INSTRUCTIONS.md  DOCKER_README.md  QWEN.md  README.md  docker-compose.yml  frontend_spec_review.md  requirements.txt  test_chat_api.py  test_chat_api_complete.py  test_chat_specs.py  test_date_parser.py  test_simple_chat.py  test_simple_chat_8001.py
agent/: .env.example  README.md  __init__.py  agent.py  configure_openrouter.py  conversation_store.py  demo_all_features.py  error_handler.py  logger.py  pyproject.toml  test_config.py  test_intent.py  test_openrouter.py  test_qwen.py  verify_fix.py
agent/config/: __init__.py  model_config.py
agent/docs/: MODEL_CONFIGURATION.md
agent/mcp/: __init__.py  reasoning.py
agent/tools/: __init__.py  conversation_tools.py  recurrence_tools.py  tag_tools.py  task_tools.py
agent/utils/: __init__.py  cache.py  conversation_search.py  date_parser.py  recurrence_parser.py  task_search.py
backend/: .env.example  alembic.ini  app.py  conftest.py  debug_login.py  fix_imports.py  main.py  pyproject.toml  pytest.ini  requirements.txt  setup.cfg  setup.py  start_server_check.py  test_api_direct.py  test_db.py  test_detailed_debug.py  test_functionality.py  test_hash.py  test_registration_flow.py  todo.db  todo_app.db
backend/alembic/: env.py
backend/src/: config.py  database.py  errors.py  logging.py  main.py
backend/src/api/: auth.py  auth_router.py  deps.py  notifications.py  reminder_router.py  tag_router.py  tag_routes.py  tags.py  task_router.py  task_routes.py  tasks.py  user_auth_routes.py  user_router.py  user_routes.py  users.py
backend/src/api/api_v1/: api.py
backend/src/api/api_v1/routes/: auth.py  tags.py  tasks.py  users.py
backend/src/api/v1/: auth.py  tags.py  tasks.py
backend/src/auth/: cookie_handler.py  dependencies.py  hash.py  hashing.py  jwt.py  refresh.py
backend/src/core/: __init__.py  auth.py  config.py  database.py  exceptions.py  logging.py  rate_limiter.py  redis.py  security.py
backend/src/database/: __init__.py  base.py  connection.py  database.py  init_db.py  session.py
backend/src/middleware/: auth.py  auth_middleware.py  cors_middleware.py
backend/src/models/: __init__.py  notification.py  recurrence_pattern.py  reminder.py  session.py  tag.py  task.py  task_tag.py  user.py
backend/src/repositories/: notification_repository.py  recurrence_repository.py  tag_repository.py  task_repository.py  user_repository.py
backend/src/schemas/: __init__.py  error.py  notification.py  recurrence_pattern.py  session.py  tag.py  task.py  token.py  user.py
backend/src/services/: auth.py  auth_service.py  email_service.py  notification_scheduler.py  notification_service.py  recurrence.py  recurrence_service.py  recurring_service.py  recurring_task_scheduler.py  reminder_service.py  tag.py  tag_service.py  task.py  task_service.py  user.py  user_service.py
backend/src/utils/: auth.py  error_handling.py  logging_config.py  responses.py  validators.py
backend/src/worker/: celery_app.py  tasks.py
backend/tests/: test_api_tags.py  test_api_tasks.py  test_main.py  test_notification_service.py  test_recurring_service.py  test_search_filter_sort.py  test_tag_service.py  test_task_service.py
backend/tests/integration/: test_task_api.py
backend/tests/performance/: test_task_performance.py
backend/tests/unit/: test_task_service.py
data/: conversations.db
deployment/: config.md  monitoring-setup.md  production-config.md
docs/: AGENT_INSTRUCTIONS_FIXED.md  AGENT_OPERATIONS_FIXED.md  ALL_ISSUES_FIXED.md  AUTH_401_FIX.md  BULK_OPERATIONS_FIXED.md  CHATBOT_FINAL_STATUS.md  COMPLETE_FIX_SUMMARY.md  COMPLETE_TASK_SUPPORT.md  COOKIE_DEBUGGING_GUIDE.md  COOKIE_FIX_APPLIED.md  api.md  (+33 more)
(+691 files in other folders)
